added text to section

--- a/index.html
+++ b/index.html
@@ -19,15 +19,36 @@
 
     <section id="projekt">
         <h2>Projekt</h2>
+        <p>Attack feet behind the couch destroy couch flop over give attitude hide when guests come over, hopped up on
+            goofballs
+            hunt anything that moves swat at dog chew ipad power cord need to chase tail rub face on everything, chase
+            imaginary
+            bugs inspect anything brought into the house make muffins bag stretch. </p>
     </section>
     <section id="erfarenhet">
         <h2>Erfarenhet</h2>
+        <p>Attack feet behind the couch destroy couch flop over give attitude hide when guests come over, hopped up on
+            goofballs
+            hunt anything that moves swat at dog chew ipad power cord need to chase tail rub face on everything, chase
+            imaginary
+            bugs inspect anything brought into the house make muffins bag stretch. </p>
     </section>
     <section id="om-mig">
         <h2>Om mig</h2>
+
+        <p>Attack feet behind the couch destroy couch flop over give attitude hide when guests come over, hopped up on
+            goofballs
+            hunt anything that moves swat at dog chew ipad power cord need to chase tail rub face on everything, chase
+            imaginary
+            bugs inspect anything brought into the house make muffins bag stretch. </p>
     </section>
     <section id="kontakt">
         <h2>Kontakt</h2>
+        <p>Attack feet behind the couch destroy couch flop over give attitude hide when guests come over, hopped up on
+            goofballs
+            hunt anything that moves swat at dog chew ipad power cord need to chase tail rub face on everything, chase
+            imaginary
+            bugs inspect anything brought into the house make muffins bag stretch. </p>
     </section>
 
 </body>
